<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/str_welcome"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_first"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_second"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_third"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_a"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_b"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_c"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_d"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_e"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fourth_f"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_fifth"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_sixth"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_seventh"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_seventh_a"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_seventh_b"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:lineSpacingExtra="@dimen/dp_12"
            android:text="@string/str_welcome_desc_seventh_c"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/bt_jump_project_by_github"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_15"
            android:textAllCaps="false"
            android:text="@string/str_jump_project_by_github"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_25" />

    </LinearLayout>

</ScrollView>